syntax = "proto3";

package xmux.forum.v4;

import "google/protobuf/timestamp.proto";
import "forum_common.proto";

option java_package = "io.xdea.xmux.forum.dto";
option java_outer_classname = "PostGrpcApi";

// lvl1 Post: parent = -1, refPostId = -1 / ref post id
// lvl2 Post: parent = lvl1 post id, refPostId = direct ref post id
message CreatePostReq {
  int32 threadId = 1;
  int32 parentId = 2;
  int32 refPostId = 3;
  string refPostUid = 4;
  string content = 5;
}

message CreatePostResp {
  int32 postId = 1;
}

message RemovePostReq {
  int32 postId = 1;
}

message GetPostsReq {
  int32 threadId = 1;
  Ordering ordering = 2;
  int32 offset = 3;
  int32 count = 4;
}

message GetPostsByUidReq {
  string uid = 1;
  Ordering ordering = 2;
  int32 offset = 3;
  int32 count = 4;
}

message GetPostsByParentReq {
  int32 parentId = 1;
  Ordering ordering = 2;
  int32 offset = 3;
  int32 count = 4;
}

message GetPostsResp {
  repeated Post posts = 1;
}

message Post {
  int32 id = 1;
  string uid = 2;
  int32 threadId = 3;
  int32 parentId = 4;
  int32 refPostId = 5;
  string refPostUid = 6;
  string content = 7;
  int32 likes = 8;
  bool pinned = 9;
  google.protobuf.Timestamp createAt = 10;
}

message LikePostReq {
  int32 postId = 1;
  // + For like. - for dislike. 0 for cancel.
  int32 like = 2;
}

message PinPostReq {
  int32 postId = 1;
  bool pinned = 2;
}